--- a/protected/etcSample/MODELS/articles/articles.yml
+++ b/protected/etcSample/MODELS/articles/articles.yml
@@ -5,7 +5,7 @@ modelBlog_vars:
   - country
   - city
 
-# calea catre fisierul yaml care trebuie inclus la acesta se va adauga constanta incPath
+# calea catre fisierul yaml care trebuie inclus la acesta se va adauga constanta INC_PATH
 include:
   - 'etc/MODELS/blog/blog.yml'
 
